TWC3167-6460, TWC3167-6401, TWC3167-6433, TWC3167-6423, TWC3167-6180 : consumption country pop up, DE credit dollar column, lnav - alignment, PS - search table font size, deal pop up alignment, reporting scrollbar - UI Bug Fixes (#2295)

--- a/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
+++ b/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
@@ -1113,3 +1113,31 @@ kendo-dialog.customVendorsDialogger .k-dialog-buttongroup {
     color: #fff !important;
     background-color: var(--light-blue) !important;
 }
+
+.consumptionCountryErrorPopup .k-window.k-dialog {
+    border-radius: 0;
+}
+
+    .consumptionCountryErrorPopup .k-window.k-dialog kendo-dialog-actions.k-dialog-buttongroup {
+        padding: 0;
+    }
+
+button.k-button.btnsOK {
+    color: #444;
+    display: inline-block;
+    padding: 1.5em 0;
+    border-radius: 0;
+    border-bottom: 0;
+    box-shadow: none;
+    font-size: 14px;
+}
+
+button.k-button.btnsOK:hover {
+    border-color: #ebebeb;
+    background-color: #ebebeb;
+}
+
+button.k-button.btnsOK:focus {
+    background-color: #dbdbdb;
+    border-color: #dbdbdb;
+}
