--- a/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
@@ -379,6 +379,7 @@
     overflow: hidden;
     display: block;
     width: 100%;
+    text-align: left;
 }
 
     .contractIdBtn:hover {
